--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.cloudera.sparkwordcount</groupId>
-    <artifactId>sparkwordcount</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.gridgain.examples</groupId>
+    <artifactId>spark-ignite</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
     <name>"Spark Word Count"</name>
 
@@ -53,8 +53,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
