--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.gridgain.examples</groupId>
-    <artifactId>spark-ignite</artifactId>
+    <artifactId>spark-ignite-example</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
-    <name>"Spark Word Count"</name>
+    <name>"Spark Ignite Simple Example"</name>
 
     <pluginRepositories>
         <pluginRepository>
